--- a/resources/config.yml
+++ b/resources/config.yml
@@ -9,6 +9,10 @@ mysql:
 # Enable/disable the queue premium
 queue-premium-enabled: true
 
+# FFA Worlds
+ffa-worlds:
+  ffa_sg: FFA_SG
+
 # Button text of the kits
 placeHolders:
   SG: "&bSG\n&8{0} Queue | {1} Playing"
